@@ -29,8 +29,7 @@ import de.ids_mannheim.korap.util.QueryException;
  * @author Nils Diewald
  */
 public class SearchKrill {
-    private final static Logger jlog = LogManager
-            .getLogger(SearchKrill.class);
+    private final static Logger jlog = LogManager.getLogger(SearchKrill.class);
 
     private static final boolean DEBUG = false;
 
@@ -39,13 +38,13 @@ public class SearchKrill {
     String i = "/Users/hanl/Projects/prep_corpus";
     String klinux10 = "/vol/work/hanl/indices";
     public static KrillIndex index;
-    
+
     /**
      * Constructor
      */
     // todo: use korap.config to get index location
     public SearchKrill (String path) {
-    	
+
         try {
             if (path.equals(":temp:")) {
                 index = new KrillIndex();
@@ -61,14 +60,13 @@ public class SearchKrill {
             };
         }
         catch (IOException e) {
-            jlog.error("Unable to loadSubTypes index:"+ e.getMessage());
+            jlog.error("Unable to loadSubTypes index:" + e.getMessage());
         };
     };
 
     public KrillIndex getIndex () {
         return index;
     };
-
 
     /**
      * Search in the Lucene index.
@@ -78,12 +76,12 @@ public class SearchKrill {
      *            filters.
      */
     public String search (String json) {
-        if (DEBUG){
+        if (DEBUG) {
             jlog.debug(json);
         }
-        if (index != null){
+        if (index != null) {
             String result = new Krill(json).apply(index).toJsonString();
-            if (DEBUG){
+            if (DEBUG) {
                 jlog.debug(result);
             }
             return result;
@@ -92,7 +90,6 @@ public class SearchKrill {
         kr.addError(601, "Unable to find index");
         return kr.toJsonString();
     };
-
 
     /**
      * Search in the Lucene index and return matches as token lists.
@@ -103,7 +100,7 @@ public class SearchKrill {
      */
     @Deprecated
     public String searchTokenList (String json) {
-        if (DEBUG){
+        if (DEBUG) {
             jlog.debug(json);
         }
         if (index != null)
@@ -113,115 +110,105 @@ public class SearchKrill {
         return kr.toJsonString();
     };
 
-
     /**
      * Get info on a match - by means of a richly annotated html
      * snippet.
      * 
      * @param id
      *            match id
-     * @param availabilityList 
-     * @throws KustvaktException 
+     * @param availabilityList
+     * @throws KustvaktException
      */
-    public String getMatch (String id, Pattern licensePattern) {
-    	Match km;
+    public String getMatch (String id, Pattern licensePattern) throws KustvaktException {
+        Match km;
         if (index != null) {
             try {
-            	km = index.getMatch(id);
-            	String availability = km.getAvailability();
-            	if (licensePattern!=null && availability != null){
-            		Matcher m = licensePattern.matcher(availability);
-            		if (!m.matches()){
-            		    if (DEBUG){
-            		        jlog.debug("availability: "+availability);
-            		    }
-                        if (availability.isEmpty()){
-                            km.addError(StatusCodes.MISSING_ATTRIBUTE, 
-                                    "Availability for "+ id +"is empty.", id);
-                        }
-            			km = new Match();
-            			km.addError(StatusCodes.ACCESS_DENIED, 
-            				"Retrieving match info with ID "+id+" is not allowed.", id);
-            		}
-            	}
+                km = index.getMatch(id);
+                String availability = km.getAvailability();
+                checkAvailability(licensePattern, availability, id);
             }
             catch (QueryException qe) {
                 km = new Match();
                 km.addError(qe.getErrorCode(), qe.getMessage());
             }
         }
-        else{
-        	km = new Match();
-        	km.addError(601, "Unable to find index");
+        else {
+            km = new Match();
+            km.addError(601, "Unable to find index");
         }
         return km.toJsonString();
     };
 
+    private void checkAvailability (Pattern licensePattern, String availability,
+            String id) throws KustvaktException {
+        if (DEBUG) {
+            jlog.debug("pattern: " + licensePattern.toString()
+                    + ", availability: " + availability);
+        }
+        if (licensePattern != null && availability != null) {
+            Matcher m = licensePattern.matcher(availability);
+            if (!m.matches()) {
+                if (availability.isEmpty()) {
+                    throw new KustvaktException(StatusCodes.MISSING_ATTRIBUTE,
+                            "Availability for " + id + "is empty.", id);
+                }
+                throw new KustvaktException(StatusCodes.AUTHORIZATION_FAILED,
+                        "Retrieving resource with ID " + id
+                                + " is not allowed.",
+                        id);
+            }
+        }
 
-	/*
-	 * Retrieve the meta fields for a certain document
-	 */
-	public String getFields (String id) {
-		MetaFields meta;
+    }
+    
+    /*
+     * Retrieve the meta fields for a certain document
+     */
+    public String getFields (String id, Pattern licensePattern)
+            throws KustvaktException {
+        MetaFields meta;
 
-		// No index found
-		if (index == null) {
-        	meta = new MetaFields(id);
-        	meta.addError(601, "Unable to find index");
-		}
+        // No index found
+        if (index == null) {
+            meta = new MetaFields(id);
+            meta.addError(601, "Unable to find index");
+        }
 
-		// Index available
-		else {
+        // Index available
+        else {
+            // Get fields
+            meta = index.getFields(id);
+        };
 
-			//Get fields
-			meta = index.getFields(id);
-		};
-		return meta.toJsonString();
-	};
+        String availability = meta.getFieldValue("availability");
+        checkAvailability(licensePattern, availability, id);
 
+        return meta.toJsonString();
+    };
 
-	
     public String getMatch (String id, List<String> foundries,
             List<String> layers, boolean includeSpans,
-            boolean includeHighlights, boolean sentenceExpansion, 
-            Pattern licensePattern) {
-    	 Match km;
+            boolean includeHighlights, boolean sentenceExpansion,
+            Pattern licensePattern) throws KustvaktException {
+        Match km;
         if (index != null) {
             try {
-            	km = index.getMatchInfo(id, "tokens", true, foundries,
-                        layers, includeSpans, includeHighlights,
-                        sentenceExpansion);
-            	String availability = km.getAvailability();
-            	
-            	if (licensePattern !=null && availability != null){
-            	    if (availability.isEmpty()){
-            	        km.addError(StatusCodes.MISSING_ATTRIBUTE, 
-                                "Availability for "+ id +"is empty.", id);
-            	    }
-            		Matcher m = licensePattern.matcher(availability);
-            		if (!m.matches()){
-            		    if (DEBUG){
-            		        jlog.debug("pattern: "+ licensePattern.toString() + ", availability: "+availability);
-            		    }
-            			km = new Match();
-            			km.addError(StatusCodes.ACCESS_DENIED, 
-            					"Retrieving match info with ID "+id+" is not allowed.", id);
-            		}
-            	}
-            	
+                km = index.getMatchInfo(id, "tokens", true, foundries, layers,
+                        includeSpans, includeHighlights, sentenceExpansion);
+                String availability = km.getAvailability();
+                checkAvailability(licensePattern, availability, id);
             }
             catch (QueryException qe) {
                 km = new Match();
                 km.addError(qe.getErrorCode(), qe.getMessage());
             }
         }
-        else{
-        	km = new Match();
-        	km.addError(601, "Unable to find index");
+        else {
+            km = new Match();
+            km.addError(601, "Unable to find index");
         }
         return km.toJsonString();
     };
-
 
     /**
      * Get info on a match - by means of a richly annotated html
@@ -270,7 +257,6 @@ public class SearchKrill {
         return km.toJsonString();
     };
 
-
     /**
      * Get statistics on (virtual) collections.
      * 
@@ -284,23 +270,23 @@ public class SearchKrill {
             return "{\"documents\" : -1, error\" : \"No index given\" }";
         };
 
-		// Define a virtual corpus
-		KrillCollection kc;
-		if (json != null && !json.equals("")) {
-			if (DEBUG){
-			    jlog.debug(json);
-			}
+        // Define a virtual corpus
+        KrillCollection kc;
+        if (json != null && !json.equals("")) {
+            if (DEBUG) {
+                jlog.debug(json);
+            }
 
-			// Create Virtual collection from json search
-			kc = new KrillCollection(json);
-		}
+            // Create Virtual collection from json search
+            kc = new KrillCollection(json);
+        }
 
-		// There is no json string defined
-		else {
+        // There is no json string defined
+        else {
 
-			// Create Virtual collection of everything
-			kc = new KrillCollection();
-		};
+            // Create Virtual collection of everything
+            kc = new KrillCollection();
+        };
 
         // Set index
         kc.setIndex(index);
@@ -308,11 +294,11 @@ public class SearchKrill {
         // Get numbers from index (currently slow)
         try {
             docs = kc.numberOf("documents");
-			if (docs > 0) {
-				tokens = kc.numberOf("tokens");
-				sentences = kc.numberOf("base/sentences");
-				paragraphs = kc.numberOf("base/paragraphs");
-			};
+            if (docs > 0) {
+                tokens = kc.numberOf("tokens");
+                sentences = kc.numberOf("base/sentences");
+                paragraphs = kc.numberOf("base/paragraphs");
+            };
         }
         catch (IOException e) {
             e.printStackTrace();
@@ -325,7 +311,6 @@ public class SearchKrill {
         return sb.toString();
     };
 
-
     /**
      * Return the match identifier as a string.
      * This is a convenient method to deal with legacy instantiation
@@ -334,22 +319,21 @@ public class SearchKrill {
      */
     public String getMatchId (String corpusID, String docID, String textID,
             String matchID) {
-        // Create a string representation of the match 
+        // Create a string representation of the match
         StringBuilder sb = new StringBuilder();
         sb.append("match-").append(corpusID).append('/').append(docID)
                 .append('/').append(textID).append('-').append(matchID);
         return sb.toString();
     };
 
-
     /**
      * Return the text sigle as a string.
      */
     public String getTextSigle (String corpusID, String docID, String textID) {
-        // Create a string representation of the match 
+        // Create a string representation of the match
         StringBuilder sb = new StringBuilder();
-        sb.append(corpusID).append('/').append(docID)
-                .append('/').append(textID);
+        sb.append(corpusID).append('/').append(docID).append('/')
+                .append(textID);
         return sb.toString();
     };
 };
