@@ -7,6 +7,7 @@
    - Added unique index to group name (margaretha)
 06/02/2019
    - Updated a user setting test using array for multiple values (margaretha)
+   - Added metadata controller tests (margaretha)
 
 # version 0.61.5
 17/12/2018
