@@ -1,7 +1,8 @@
 # version 0.61.6
-
 06/02/2018
    - Added default foundry for structure layer (margaretha)
+   - Added authentication to metadata controller (margaretha, issue #38)
+   - Updated search krill error handling (margaretha)
 
 # version 0.61.5
 17/12/2018
